--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -106,7 +106,7 @@
   "list_details_load_failed": "Wort konnte nicht abgerufen werden ",
   "list_details_practice_button_label": "Üben",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Abgestufte Wiederholung",
+  "list_details_learningMode_spatial": "Wiederholung Scheitern",
   "list_details_empty": "Kein verfügbares Wort.\n\nFügen Sie neue Wörter zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
   "list_details_searchBar_hint": "Suche nach Wort, Bedeutung, Aussprache",
   "kan_list_tile_createDialogForDeletingKanList_title": "KanList entfernen",
@@ -129,10 +129,12 @@
   "kanji_lists_newUpdateAvailable_label": "Neue Version!",
   "kanji_lists_load_failed": "Fehler beim Abrufen der Listen.",
   "kanji_lists_empty": "Keine verfügbaren Listen.\n\nErstellen Sie neue Listen für Ihre Studie, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
-  "done_button_label": "Fertig!",
+  "done_button_label": "Fertig!", 
   "perfect_button_label": "Perfekt",
-  "mid_perfect_button_label": "Gut",
-  "mid_wrong_button_label": "Teilweise",
+  "mid_perfect_button_label": "Fast",
+  "mid_good_button_label": "Gut",
+  "mid_button_label": "Teilweise",
+  "mid_wrong_button_label": "Schlecht",
   "wrong_button_label": "Falsch",
   "developer_info_label": "Entwickler-Informationen",
   "developer_info_follow": "@gabrielglbh auf GitHub",
@@ -348,7 +350,7 @@
   "abbr_test_mode_daily": "Täglich",
   "daily_test_bottom_sheet_title": "Einen täglichen Test durchführen",
   "daily_test_bottom_sheet_load_failed": "Es konnte keine Liste erfasst werden. Versuchen Sie es später erneut.",
-  "daily_test_description": "Führen Sie einen täglichen Test in einem zufälligen Modus (Schreiben, Lesen, Hören, Erkennen oder Sprechen) mit einer geordneten Kombination von Wörtern durch, um Ihr Lernen zu stärken.\n\nSie können diesen Test jederzeit wiederholen, aber Sie können ihn nicht beenden, sondern müssen ihn zu Ende bringen!",
+  "daily_test_description": "Einen Test durchführen, bei dem die Wörter auf der Grundlage der Korrektheit der vergangenen täglichen Tests sortiert werden. Führen Sie diesen Test täglich durch, um sich besser zu erinnern.",
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
@@ -357,7 +359,7 @@
   "stats_tests_total_acc": "Gesamtgenauigkeit der Tests nach Studienmodus",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
-  "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
+  "disclaimer_spatial_repetition": "Die Praxis basiert auf dem Lernen durch Nicht-Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
   "settings_general_kanji_list": "Gruppenstatistiken nach Wort",
   "settings_general_kanji_list_description": "Wenn diese Funktion aktiviert ist, wird bei allen KanLists-Wörtern der Mittelwert über alle Studienmodi hinweg angezeigt, anstatt zwischen ihnen zu wechseln.",
   "tests": "Tests",
@@ -374,5 +376,12 @@
   "filter_select_dates_label": "Datumsbereich",
   "filter_select_test_type_label": "Testart",
   "filter_select_study_mode_label": "Studienmodus",
-  "filter_apply": "Anwenden"
+  "filter_apply": "Anwenden",
+  "settings_general_repetition_toggle": "Fehlerhafte Wiederholungen in Tests aktivieren",
+  "settings_general_repetition_sub": "Wenn diese Funktion aktiviert ist, werden die Wörter, die Sie in einem Test nicht bestanden haben, am Ende zum Üben wieder angezeigt. Die Genauigkeit wird beim Üben nicht aktualisiert. Gilt nicht für den täglichen Test.",
+  "clear_canvas": "Löschen",
+  "back_canvas": "Zurück",
+  "settings_enhancements_label": "Erweiterungen",
+  "pending_review": "ausstehende tägliche Überprüfung",
+  "can_take_a_while_loading": "Kann eine Weile dauern, bitte schließen Sie die Seite nicht."
 }
