--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -106,7 +106,7 @@
   "list_details_load_failed": "Failed to retrieve words",
   "list_details_practice_button_label": "Practice",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Spaced Repetition",
+  "list_details_learningMode_spatial": "Fail Repetition",
   "list_details_empty": "No available words.\n\nAdd new words to this list by tapping on '+' or import them from your backup.",
   "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
@@ -131,8 +131,10 @@
   "kanji_lists_empty": "No available lists.\n\nCreate new lists for your study by tapping on '+' or import them from your backup.",
   "done_button_label": "Done!",
   "perfect_button_label": "Perfect",
-  "mid_perfect_button_label": "Good",
-  "mid_wrong_button_label": "Partial",
+  "mid_perfect_button_label": "Almost perfect",
+  "mid_good_button_label": "Good",
+  "mid_button_label": "Partial",
+  "mid_wrong_button_label": "Bad",
   "wrong_button_label": "Wrong",
   "developer_info_label": "Developer Info",
   "developer_info_follow": "@gabrielglbh on GitHub",
@@ -348,7 +350,7 @@
   "abbr_test_mode_daily": "Daily",
   "daily_test_bottom_sheet_title": "Perform a daily test",
   "daily_test_bottom_sheet_load_failed": "No list could be gathered. Try again later.",
-  "daily_test_description": "Perform a daily test on a random mode (writing, reading, listening, recognition or speaking) with an ordered combination of words to strengthen your study.\n\nYou can repeat this test whenever you want but you cannot exit from it, you have to finish it!",
+  "daily_test_description": "Perform a test in which the words will be sorted based on the success of past daily tests. Perform this test daily for better memorization.",
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "You are performing a daily test. Finish the test, you can do it!",
@@ -357,7 +359,7 @@
   "stats_tests_total_acc": "Total Accuracy of Tests by Study Mode",
   "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
-  "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
+  "disclaimer_spatial_repetition": "The practice is based on learning by fail repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
   "settings_general_kanji_list": "Group statistics by word",
   "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them",
   "tests": "Tests",
@@ -374,5 +376,12 @@
   "filter_select_dates_label": "Date range",
   "filter_select_test_type_label": "Test type",
   "filter_select_study_mode_label": "Study mode",
-  "filter_apply": "Apply"
+  "filter_apply": "Apply",
+  "settings_general_repetition_toggle": "Enable Fail Repetition in Tests",
+  "settings_general_repetition_sub": "When enabled the words you fail in a test will reappear at the end for practice. The accuracy will not be updated when practicing. Not applicable in Daily Test.",
+  "clear_canvas": "Clear",
+  "back_canvas": "Back",
+  "settings_enhancements_label": "Enhancements",
+  "pending_review": "Pending daily reviews",
+  "can_take_a_while_loading": "Might take a while, do not close this page."
 }
