Added opt-out notifications for daily tests

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -383,5 +383,8 @@
   "back_canvas": "Zurück",
   "settings_enhancements_label": "Erweiterungen",
   "pending_review": "ausstehende tägliche Überprüfung",
-  "can_take_a_while_loading": "Kann eine Weile dauern, bitte schließen Sie die Seite nicht."
+  "can_take_a_while_loading": "Kann eine Weile dauern, bitte schließen Sie die Seite nicht.",
+  "settings_daily_test_options": "Tägliche Testoptionen",
+  "settings_daily_notification_title": "Tägliche Benachrichtigung anzeigen",
+  "settings_daily_notification_sub": "Wenn diese Option aktiviert ist, wird die tägliche Testaufforderung auf Ihrem Startbildschirm angezeigt, wenn Sie Wörter für diesen Lernmodus zu überprüfen haben."
 }
