--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -383,5 +383,8 @@
   "back_canvas": "Back",
   "settings_enhancements_label": "Enhancements",
   "pending_review": "Pending daily reviews",
-  "can_take_a_while_loading": "Might take a while, do not close this page."
+  "can_take_a_while_loading": "Might take a while, do not close this page.",
+  "settings_daily_test_options": "Daily test options",
+  "settings_daily_notification_title": "Show daily notificaction",
+  "settings_daily_notification_sub": "If active, when you have words to review for that study mode, the daily test prompt will pop up on your home screen."
 }
