--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -106,7 +106,7 @@
   "list_details_load_failed": "No se han podido encontrar palabras.",
   "list_details_practice_button_label": "Practicar",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Repetición Espaciada",
+  "list_details_learningMode_spatial": "Repetición de Fallos",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
@@ -131,9 +131,11 @@
   "kanji_lists_empty": "No hay listas disponibles.\n\nCrea nuevas listas para tu estudio pulsando en '+' o importalas desde tu copia de seguridad.",
   "done_button_label": "¡Hecho!",
   "perfect_button_label": "Perfecto",
-  "mid_perfect_button_label": "Bien",
-  "mid_wrong_button_label": "Parcial",
-  "wrong_button_label": "Mal",
+  "mid_perfect_button_label": "Casi perfecto",
+  "mid_good_button_label": "Bien",
+  "mid_button_label": "Parcial",
+  "mid_wrong_button_label": "Mal",
+  "wrong_button_label": "Erróneo",
   "developer_info_label": "Info del Desarrollador",
   "developer_info_follow": "@gabrielglbh en GitHub",
   "developer_info_report": "Reportar errores a",
@@ -348,7 +350,7 @@
   "abbr_test_mode_daily": "Diario",
   "daily_test_bottom_sheet_title": "Hacer un test diario",
   "daily_test_bottom_sheet_load_failed": "No se ha podido hacer ninguna lista. Prueba de nuevo más tarde.",
-  "daily_test_description": "Realiza un test diario en una modalidad aleatoria (escritura, lectura, escucha, reconocimiento o habla) con una combinación ordenada de palabras para reforzar tu estudio.\n\nPuedes repetir este test cuando quieras pero no puedes salir de él, ¡tienes que terminarlo!",
+  "daily_test_description": "Realiza un test en el que las palabras saldrán ordenadas en base al acierto de tests diarios pasados. Haz este test a diario para una mayor memorización.",
   "daily_test_start_button": "Empezar",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
@@ -357,7 +359,7 @@
   "stats_tests_total_acc": "Acierto de Tests por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
-  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
+  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición de fallos. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
   "settings_general_kanji_list": "Agrupar estadísticas por palabra",
   "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
   "tests": "Tests",
@@ -374,6 +376,15 @@
   "filter_select_dates_label": "Rango de fechas",
   "filter_select_test_type_label": "Tipo de test",
   "filter_select_study_mode_label": "Modo de estudio",
-  "filter_apply": "Aplicar"
-
+  "filter_apply": "Aplicar",
+  "settings_general_repetition_toggle": "Activar Repetición de Fallos en Tests",
+  "settings_general_repetition_sub": "Cuando se activa las palabras que falles en un test volverán a aparecer al final para practicarlas. El acierto no se actualizará al practicar. No aplicable en el Test Diario.",
+  "clear_canvas": "Limpiar",
+  "back_canvas": "Atrás",
+  "settings_enhancements_label": "Mejoras",
+  "pending_review": "Pendiente de revisión diaria",
+  "can_take_a_while_loading": "Pude tardar un poco, no cierres esta página.",
+  "settings_daily_test_options": "Opciones de test diarios",
+  "settings_daily_notification_title": "Mostrar noticiatión de test",
+  "settings_daily_notification_sub": "Si está activo, cuando tengas palabras que revisar para ese modo de estudio, el aviso del test diario aparecerá en la pantalla de inicio."
 }
