--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -388,5 +388,6 @@
   "settings_daily_notification_title": "Show daily notificaction",
   "settings_daily_notification_sub": "If active, when you have words to review for that study mode, the daily test prompt will pop up on your home screen.",
   "settings_daily_pace": "Controlled pace",
-  "settings_daily_pace_sub": "If active, you will perform 1 test per day per each study mode with a precalculated number of words. Else, no restrictions."
+  "settings_daily_pace_sub": "If active, you will perform 1 test per day per each study mode with a precalculated number of words. Else, no restrictions.",
+  "filter_recently_added": "Recent"
 }
