--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -389,5 +389,6 @@
   "settings_daily_notification_sub": "Wenn diese Option aktiviert ist, wird die tägliche Testaufforderung auf Ihrem Startbildschirm angezeigt, wenn Sie Wörter für diesen Lernmodus zu überprüfen haben.",
   "settings_daily_pace": "Kontrolliertes Tempo",
   "settings_daily_pace_sub": "Wenn aktiv, werden Sie 1 Test pro Tag für jeden Lernmodus mit einer vorausberechneten Anzahl von Wörtern durchführen. Andernfalls: keine Einschränkungen.",
-  "filter_recently_added": "Aktuelle"
+  "filter_recently_added": "Aktuelle",
+  "test_info_controlled_pace": "Sie können nur einen Tagestest pro Lernmodus und Tag absolvieren."
 }
