--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -383,5 +383,12 @@
   "back_canvas": "Back",
   "settings_enhancements_label": "Enhancements",
   "pending_review": "Pending daily reviews",
-  "can_take_a_while_loading": "Might take a while, do not close this page."
+  "can_take_a_while_loading": "Might take a while, do not close this page.",
+  "settings_daily_test_options": "Daily Test Options",
+  "settings_daily_notification_title": "Show daily notificaction",
+  "settings_daily_notification_sub": "If active, when you have words to review for that study mode, the daily test prompt will pop up on your home screen.",
+  "settings_daily_pace": "Controlled pace",
+  "settings_daily_pace_sub": "If active, you will perform 1 test per day per each study mode with a precalculated number of words. Else, no restrictions.",
+  "filter_recently_added": "Recent",
+  "test_info_controlled_pace": "You will only be able to complete one daily test per study mode per day."
 }
