--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -241,8 +241,9 @@
   "coach_tutorial_kanlists_6": "Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
   "coach_tutorial_kanlists_7": "Por último, los ajustes donde podrás ver tus estadísticas y cambiar otras funciones.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
-  "coach_tutorial_detail_2": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (izquierda), añadir esta lista a una carpeta determinada (centro) o añadir más vocabulario a la lista que veas por la calle, estudiando, leyendo, en videojuegos o anime.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
-  "coach_tutorial_detail_3": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
+  "coach_tutorial_detail_2": "Puedes alternar entre palabras y gramática en tus listas al pulsar estos botones. Podrás añadir más en cualquier momento a medida que tu estudio avance.",
+  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (izquierda), añadir esta lista a una carpeta determinada (centro) o añadir más vocabulario a la lista que veas por la calle, estudiando, leyendo, en videojuegos o anime.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
+  "coach_tutorial_detail_4": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
   "settings_general_statistics": "Estadísticas",
   "stats_words": "Número Total de Palabras",
   "stats_tests": "Número Total de Tests",
