--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -241,8 +241,9 @@
   "coach_tutorial_kanlists_6": "Access to the market, where you can download vocabulary lists that have been created and uploaded by other users.",
   "coach_tutorial_kanlists_7": "Finally, the settings where you can view your statistics and change other functions.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
-  "coach_tutorial_detail_2": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
-  "coach_tutorial_detail_3": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
+  "coach_tutorial_detail_2": "You can swap between words and grammar on all lists by clicking these buttons. You can add words and/or grammar as your study progresses.",
+  "coach_tutorial_detail_3": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
+  "coach_tutorial_detail_4": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
   "settings_general_statistics": "Statistics",
   "stats_words": "Total Number of Words",
   "stats_tests": "Total Number of Tests",
