--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -408,5 +408,9 @@
   "add_grammar_textForm_definition": "Definition",
   "add_grammar_textForm_definition_ext": "に denotes that (Noun) exists in (Place)",
   "add_grammar_textForm_example": "Example(s)",
-  "add_grammar_textForm_example_ext": "私の部屋に椅子があります\n事務所にあなたがいました"
+  "add_grammar_textForm_example_ext": "私の部屋に椅子があります\n事務所にあなたがいました",
+  "study_modes_definition": "Definition",
+  "study_modes_definition_ext": "定義",
+  "list_details_load_failed_grammar": "Failed to retrieve grammar points",
+  "list_details_empty_grammar": "No available grammar points.\n\nAdd new grammar points to this list by tapping on '+' or import them from your backup."
 }
