--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -412,5 +412,10 @@
   "study_modes_definition": "Definition",
   "study_modes_definition_ext": "定義",
   "list_details_load_failed_grammar": "Grammatikpunkte konnten nicht abgerufen werden",
-  "list_details_empty_grammar": "Keine Grammatikpunkte verfügbar.\n\n Fügen Sie neue Grammatikpunkte zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrer Sicherung."
+  "list_details_empty_grammar": "Keine Grammatikpunkte verfügbar.\n\n Fügen Sie neue Grammatikpunkte zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrer Sicherung.",
+  "grammar_bottom_sheet_createDialogForDeletingGrammar_removal_failed": "Fehler beim Entfernen des Grammatikpunkts",
+  "grammar_bottom_sheet_createDialogForDeletingGrammar_failed": "Generischer Fehler beim Entfernen des Grammatikpunkts",
+  "grammar_bottom_sheet_removeGrammar_title": "Einen Grammatikpunkt entfernen",
+  "grammar_bottom_sheet_removeGrammar_content": "Sind Sie sicher, dass Sie diesen Punkt entfernen wollen?",
+  "grammar_bottom_sheet_removeGrammar_positive": "Entfernen"
 }
