--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -412,5 +412,10 @@
   "study_modes_definition": "Definition",
   "study_modes_definition_ext": "定義",
   "list_details_load_failed_grammar": "Failed to retrieve grammar points",
-  "list_details_empty_grammar": "No available grammar points.\n\nAdd new grammar points to this list by tapping on '+' or import them from your backup."
+  "list_details_empty_grammar": "No available grammar points.\n\nAdd new grammar points to this list by tapping on '+' or import them from your backup.",
+  "grammar_bottom_sheet_createDialogForDeletingGrammar_removal_failed": "Error removing grammar point",
+  "grammar_bottom_sheet_createDialogForDeletingGrammar_failed": "Generic error removing grammar point",
+  "grammar_bottom_sheet_removeGrammar_title": "Remove a grammar point",
+  "grammar_bottom_sheet_removeGrammar_content": "Are you sure you want to remove this point?",
+  "grammar_bottom_sheet_removeGrammar_positive": "Remove"
 }
