--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -418,6 +418,6 @@
   "grammar_bottom_sheet_removeGrammar_title": "Remove a grammar point",
   "grammar_bottom_sheet_removeGrammar_content": "Are you sure you want to remove this point?",
   "grammar_bottom_sheet_removeGrammar_positive": "Remove",
-  "test_mode_grammar": "Grammar Test",
-  "abbr_test_mode_grammar": "Grammar"
+  "grammar_change_graphs": "Show grammar %",
+  "word_change_graphs": "Show words %"
 }
