--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -358,7 +358,7 @@
   "settings_notifications_label": "Enable/Disable Notifications",
   "stats_tests_by_type": "Total Number of Tests by Type",
   "stats_tests_total_acc": "Total Accuracy of Tests by Study Mode",
-  "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
+  "stats_tests_tap_to_specs": "Tap on the bars to see more details",
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
   "disclaimer_spatial_repetition": "The practice is based on learning by fail repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
   "settings_general_kanji_list": "Group statistics by word",
@@ -418,6 +418,7 @@
   "grammar_bottom_sheet_removeGrammar_title": "Remove a grammar point",
   "grammar_bottom_sheet_removeGrammar_content": "Are you sure you want to remove this point?",
   "grammar_bottom_sheet_removeGrammar_positive": "Remove",
-  "grammar_change_graphs": "Show grammar %",
-  "word_change_graphs": "Show words %"
+  "grammar_change_graphs": "Show grammar",
+  "word_change_graphs": "Show words",
+  "stats_grammar": "Total Number of Grammar Points"
 }
