--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -358,7 +358,7 @@
   "settings_notifications_label": "Activar/Desactivar Notificaciones",
   "stats_tests_by_type": "Número Total de Tests por Tipo",
   "stats_tests_total_acc": "Acierto de Tests por Modo de Estudio",
-  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
+  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
   "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición de fallos. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
   "settings_general_kanji_list": "Agrupar estadísticas por palabra",
@@ -418,6 +418,7 @@
   "grammar_bottom_sheet_removeGrammar_title": "Eliminar un punto gramatical",
   "grammar_bottom_sheet_removeGrammar_content": "¿Estás seguro de que quieres eliminar este punto?",
   "grammar_bottom_sheet_removeGrammar_positive": "Eliminar",
-  "grammar_change_graphs": "Mostrar % de gramática",
-  "word_change_graphs": "Mostrar % de palabras"
+  "grammar_change_graphs": "Mostrar gramática",
+  "word_change_graphs": "Mostrar palabras",
+  "stats_grammar": "Número Total de Puntos Gramaticales"
 }
