Added MarkDown support for Grammar Points

--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -421,5 +421,6 @@
   "grammar_change_graphs": "Show grammar",
   "word_change_graphs": "Show words",
   "stats_grammar": "Total Number of Grammar Points",
-  "market_filter_grammar": "Grammar points"
+  "market_filter_grammar": "Grammar points",
+  "markdown_support": "Markdown support. Tap here for more information."
 }
