--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -421,5 +421,6 @@
   "grammar_change_graphs": "Grammatik anzeigen",
   "word_change_graphs": "Wörter anzeigen",
   "stats_grammar": "Gesamtzahl der Grammatikpunkte",
-  "market_filter_grammar": "Grammatikpunkte"
+  "market_filter_grammar": "Grammatikpunkte",
+  "markdown_support": "Markdown-Unterstützung. Hier klicken für weitere Informationen"
 }
