--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -424,5 +424,5 @@
   "market_filter_grammar": "Grammatikpunkte",
   "markdown_support": "Markdown-Unterstützung. Hier klicken für weitere Informationen",
   "study_modes_grammarPoints": "Grammatikpunkt",
-  "study_modes_grammarPoints_ext": "文法のポイント"
+  "study_modes_grammarPoints_ext": "文法点"
 }
