--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -424,5 +424,5 @@
   "market_filter_grammar": "Grammar points",
   "markdown_support": "Markdown support. Tap here for more information.",
   "study_modes_grammarPoints": "Grammar Points",
-  "study_modes_grammarPoints_ext": "文法のポイント"
+  "study_modes_grammarPoints_ext": "文法点"
 }
