--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -424,5 +424,5 @@
   "market_filter_grammar": "Puntos gramaticales",
   "markdown_support": "Soporte de Markdown. Pulsa aquí para más información.",
   "study_modes_grammarPoints": "Puntos Gramaticales",
-  "study_modes_grammarPoints_ext": "文法のポイント"
+  "study_modes_grammarPoints_ext": "文法点"
 }
