Added Grammar Mode: Grammar Points (#127)
* Basic arch change with grammar point grammar mode

* naming

* Graphs, BS and Test Result UI

* Grammar List Details UI

* UI Fixes

* Updating grammar points on tests and UI fixes

* Graphs fixes on stats

* Fixed mean on stats

* TODO clauses

--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -422,5 +422,7 @@
   "word_change_graphs": "Show words",
   "stats_grammar": "Total Number of Grammar Points",
   "market_filter_grammar": "Grammar points",
-  "markdown_support": "Markdown support. Tap here for more information."
+  "markdown_support": "Markdown support. Tap here for more information.",
+  "study_modes_grammarPoints": "Grammar Points",
+  "study_modes_grammarPoints_ext": "文法点"
 }
