--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -25,23 +25,23 @@
   "study_mode_update_handler_popped_title": "¿Quieres salir?",
   "study_mode_update_handler_finished_positive": "Terminar",
   "study_mode_update_handler_popped_positive": "Salir",
-  "add_kanji_createKanji_successful": "Palabra creada en KanList correctamente",
-  "add_kanji_createKanji_failed_insertion": "Error al crear palabra: la palabra ya está en otra lista",
-  "add_kanji_createKanji_failed": "Error genérico al crear la palabra",
-  "add_kanji_updateKanji_failed_update": "Error al actualizar la palabra",
-  "add_kanji_updateKanji_failed": "Error genérico al actualizar la palabra",
-  "add_kanji_validateKanji_failed": "Rellena correctamente el formulario",
-  "add_kanji_update_title": "Actualizar",
-  "add_kanji_new_title": "Añadir",
-  "add_kanji_textForm_kanji": "Palabra",
-  "add_kanji_textForm_kanji_ext": "学生",
-  "add_kanji_textForm_reading": "Pronunciación",
-  "add_kanji_textForm_reading_ext": "がくせい",
-  "add_kanji_textForm_meaning": "Significado",
-  "add_kanji_textForm_meaning_ext": "Estudiante",
-  "add_kanji_save": "Guardar",
-  "add_kanji_saveAndNext": "Añadir otro",
-  "add_kanji_copy": "Copiar a Pron.",
+  "add_word_createWord_successful": "Palabra creada en KanList correctamente",
+  "add_word_createWord_failed_insertion": "Error al crear palabra: la palabra ya está en otra lista",
+  "add_word_createWord_failed": "Error genérico al crear la palabra",
+  "add_word_updateWord_failed_update": "Error al actualizar la palabra",
+  "add_word_updateWord_failed": "Error genérico al actualizar la palabra",
+  "add_word_validateWord_failed": "Rellena correctamente el formulario",
+  "add_word_update_title": "Actualizar",
+  "add_word_new_title": "Añadir",
+  "add_word_textForm_word": "Palabra",
+  "add_word_textForm_word_ext": "学生",
+  "add_word_textForm_reading": "Pronunciación",
+  "add_word_textForm_reading_ext": "がくせい",
+  "add_word_textForm_meaning": "Significado",
+  "add_word_textForm_meaning_ext": "Estudiante",
+  "add_word_save": "Guardar",
+  "add_word_saveAndNext": "Añadir otro",
+  "add_word_copy": "Copiar a Pron.",
   "backup_bloc_creation_successful": "Copia de seguridad creada con éxito",
   "backup_bloc_creation_failed": "Algo salió mal mientras se creaba la copia de seguridad:",
   "backup_bloc_merge_successful": "Copia de seguridad instalada con éxito",
@@ -89,16 +89,16 @@
   "login_manage_backup_title": "Gestiona tu copia de seguridad",
   "login_miscellaneous_title": "Misc",
   "login_close_session_title": "Cerrar sesión",
-  "kanji_bottom_sheet_removeKanji_title": "Eliminar una palabra",
-  "kanji_bottom_sheet_removeKanji_content": "¿Estás seguro de que quieres eliminar esta palabra?",
-  "kanji_bottom_sheet_removeKanji_positive": "Eliminar",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Error al eliminar la palabra",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Error genérico al eliminar la palabra",
+  "word_bottom_sheet_removeWord_title": "Eliminar una palabra",
+  "word_bottom_sheet_removeWord_content": "¿Estás seguro de que quieres eliminar esta palabra?",
+  "word_bottom_sheet_removeWord_positive": "Eliminar",
+  "word_bottom_sheet_createDialogForDeletingWord_removal_failed": "Error al eliminar la palabra",
+  "word_bottom_sheet_createDialogForDeletingWord_failed": "Error genérico al eliminar la palabra",
   "wildcard": "?",
   "created_label": "Creado",
   "last_seen_label": "Visto hace",
-  "kanji_bottom_sheet_update_label": "Actualizar",
-  "kanji_bottom_sheet_removal_label": "Eliminar",
+  "word_bottom_sheet_update_label": "Actualizar",
+  "word_bottom_sheet_removal_label": "Eliminar",
   "list_details_loadUpPractice_failed": "¡Primero añade nuevas palabras para estudiar!",
   "list_details_updateKanListName_title": "Cambiar el nombre de la KanList",
   "list_details_updateKanListName_header": "Nombre",
@@ -117,18 +117,18 @@
   "study_bottom_sheet_load_failed": "Fallo en la recuperación de las listas",
   "study_bottom_sheet_button_label_ext": "終わり",
   "study_bottom_sheet_button_label": "¡Hecho!",
-  "kanji_lists_createDialogForAddingKanList_title": "Nueva KanList",
-  "kanji_lists_createDialogForAddingKanList_header": "KanList Nombre",
-  "kanji_lists_createDialogForAddingKanList_hint": "Nombre",
-  "kanji_lists_createDialogForAddingKanList_positive": "Crear",
+  "word_lists_createDialogForAddingKanList_title": "Nueva KanList",
+  "word_lists_createDialogForAddingKanList_header": "KanList Nombre",
+  "word_lists_createDialogForAddingKanList_hint": "Nombre",
+  "word_lists_createDialogForAddingKanList_positive": "Crear",
   "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=es&gl=US",
-  "kanji_lists_versionDialog_button_label": "Ir a la tienda",
-  "kanji_lists_versionDialog_title": "Nueva versión disponible",
-  "kanji_lists_versionDialog_notes": "Notas de Versión:",
-  "kanji_lists_searchBar_hint": "Buscar por nombre de lista, palabra, significado, pronunciación",
-  "kanji_lists_newUpdateAvailable_label": "¡Nueva actualización!",
-  "kanji_lists_load_failed": "Fallo al recuperar las listas",
-  "kanji_lists_empty": "No hay listas disponibles.\n\nCrea nuevas listas para tu estudio pulsando en '+' o importalas desde tu copia de seguridad.",
+  "word_lists_versionDialog_button_label": "Ir a la tienda",
+  "word_lists_versionDialog_title": "Nueva versión disponible",
+  "word_lists_versionDialog_notes": "Notas de Versión:",
+  "word_lists_searchBar_hint": "Buscar por nombre de lista, palabra, significado, pronunciación",
+  "word_lists_newUpdateAvailable_label": "¡Nueva actualización!",
+  "word_lists_load_failed": "Fallo al recuperar las listas",
+  "word_lists_empty": "No hay listas disponibles.\n\nCrea nuevas listas para tu estudio pulsando en '+' o importalas desde tu copia de seguridad.",
   "done_button_label": "¡Hecho!",
   "perfect_button_label": "Perfecto",
   "mid_perfect_button_label": "Casi perfecto",
@@ -160,12 +160,12 @@
   "settings_information_license_label": "Licencias",
   "settings_information_terms_label": "Legal",
   "settings_information_about_label": "Copyright",
-  "settings_number_of_kanji_in_test": "Número de Palabras en los Tests",
+  "settings_number_of_word_in_test": "Número de Palabras en los Tests",
   "settings_toggle_theme": "Cambiar Tema",
   "settings_theme_system": "Sistema",
   "settings_theme_light": "Claro",
   "settings_theme_dark": "Oscuro",
-  "change_kanji_in_test_selection": "Selecciona un Valor",
+  "change_word_in_test_selection": "Selecciona un Valor",
   "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
   "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
   "test_history_showRemoveTestsDialog_positive": "Eliminar",
@@ -177,7 +177,7 @@
   "test_result_disclaimer": "El resultado se guardará en tu dispositivo. Todos los resultados se pueden visualizar en los ajustes",
   "test_result_save_button_label": "Salir",
   "test_result_do_test_button_label": "Hacer otro test",
-  "writing_next_kanji_label": "Siguiente",
+  "writing_next_word_label": "Siguiente",
   "writing_validation_failed": "Escribir algo primero",
   "blitz_bottom_sheet_title": "Hacer un test blitz",
   "blitz_bottom_sheet_content": "palabras serán seleccionados aleatoriamente. ¡Empecemos el test blitz!",
@@ -224,14 +224,14 @@
   "image_not_loaded": "No se ha podido cargar la imagen :(",
   "dict_title": "Diccionario",
   "dict_search_bar_hint": "Dibuja o escribe una palabra",
-  "dict_search_empty": "Dibuja un kanji primero",
+  "dict_search_empty": "Dibuja un word primero",
   "dict_search_button_title": "Buscar",
   "dict_predictions_most_likely": "Más probable",
   "dict_predictions_less_likely": "Menos probable",
-  "dict_jisho_add_kanji_bottom_sheet_title": "Selecciona una KanList para añadir la palabra y clasifícala",
-  "dict_jisho_add_kanji_label": "Añadir a KanList",
-  "dict_jisho_create_kanji_list": "Crear nueva KanList",
-  "dict_add_kanji_title": "Dibujar palabra",
+  "dict_jisho_add_word_bottom_sheet_title": "Selecciona una KanList para añadir la palabra y clasifícala",
+  "dict_jisho_add_word_label": "Añadir a KanList",
+  "dict_jisho_create_word_list": "Crear nueva KanList",
+  "dict_add_word_title": "Dibujar palabra",
   "dict_model_not_loaded": "No se ha podido cargar el modelo :(",
   "coach_tutorial_kanlists_1": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.\n\nAquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
   "coach_tutorial_kanlists_2": "Puedes tocar aquí para ver todas tus listas o carpetas. Puedes crear carpetas para agrupar las listas con el fin de clasificarlas y ordenarlas en tu estudio.\n\nPor ejemplo, es posible que quieras almacenar todas tus listas de las lecciones de Mina No Nihongo o Genki en una sola carpeta",
@@ -250,17 +250,17 @@
   "stats_words_lists": "Listas",
   "stats_best_list": "Mejor lista",
   "stats_worst_list": "Peor lista",
-  "kanji_category_noun": "Sustantivo",
-  "kanji_category_pronoun": "Pronombre",
-  "kanji_category_verb": "Verbo",
-  "kanji_category_adjective": "Adjetivo",
-  "kanji_category_adverb": "Adverbio",
-  "kanji_category_expression": "Expresión",
-  "kanji_category_counter": "Contador",
-  "kanji_category_preposition": "Preposición",
-  "kanji_category_conjunction": "Conjunción",
-  "kanji_category_interjection": "Interjección",
-  "kanji_category_label": "Categoría",
+  "word_category_noun": "Sustantivo",
+  "word_category_pronoun": "Pronombre",
+  "word_category_verb": "Verbo",
+  "word_category_adjective": "Adjetivo",
+  "word_category_adverb": "Adverbio",
+  "word_category_expression": "Expresión",
+  "word_category_counter": "Contador",
+  "word_category_preposition": "Preposición",
+  "word_category_conjunction": "Conjunción",
+  "word_category_interjection": "Interjección",
+  "word_category_label": "Categoría",
   "test_mode_categories": "Test de Categoría",
   "categories_test_bottom_sheet_title": "Haz un test con la categoría de tu elección",
   "categories_test_bottom_sheet_label": "Categoría:",
@@ -283,7 +283,7 @@
   "add_to_market_successfully_created": "La lista se ha subido correctamente.",
   "add_to_market_go_back_to_market_button_label": "Ir al mercado",
   "add_to_market_validation_failed": "Rellena correctamente los campos",
-  "add_to_market_kanji_empty": "La lista que has seleccionado no tiene palabras",
+  "add_to_market_word_empty": "La lista que has seleccionado no tiene palabras",
   "add_to_market_authentication_failed": "La autenticación de usuario ha fallado. Inténtalo de nuevo.",
   "add_to_market_already_uploaded": "La lista ya está subida. Prueba con otra lista.",
   "add_to_market_something_wrong": "Algo ha ocurrido mientras se subía la lista. Prueba otra vez más tarde.",
@@ -361,8 +361,8 @@
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
   "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición de fallos. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
-  "settings_general_kanji_list": "Agrupar estadísticas por palabra",
-  "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
+  "settings_general_word_list": "Agrupar estadísticas por palabra",
+  "settings_general_word_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
   "tests": "Tests",
   "specific_accuracy_label": "Acierto Total",
   "success": "Acierto",
