--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -424,5 +424,7 @@
   "market_filter_grammar": "Grammatikpunkte",
   "markdown_support": "Markdown-Unterstützung. Hier klicken für weitere Informationen",
   "study_modes_grammarPoints": "Grammatikpunkt",
-  "study_modes_grammarPoints_ext": "文法点"
+  "study_modes_grammarPoints_ext": "文法点",
+  "settings_general_badge_words": "Wörter als Badges anzeigen",
+  "settings_general_badge_words_description": "Ob Wörter in Listen als Abzeichen oder als Listenelemente angezeigt werden sollen."
 }
